# OpenCV-Face-RCGN

./: CMakeLists.txt  README.md  dox.config  mainpage.dox
docs/html/: EditProfile_8cpp.html  EditProfile_8cpp__incl.dot  EditProfile_8h.html  EditProfile_8h__dep__incl.dot  EditProfile_8h__incl.dot  EditProfile_8h_source.html  FaceDetector_8cpp.html  FaceDetector_8cpp__incl.dot  FaceDetector_8h.html  FaceDetector_8h__dep__incl.dot  FaceDetector_8h__incl.dot  FaceDetector_8h_source.html  FaceRecognizerWrapper_8cpp.html  FaceRecognizerWrapper_8cpp__incl.dot  FaceRecognizerWrapper_8h.html  FaceRecognizerWrapper_8h__dep__incl.dot  FaceRecognizerWrapper_8h__incl.dot  FaceRecognizerWrapper_8h_source.html  annotated.html  classEditProfile-members.html  classEditProfile.html  classEditProfile__coll__graph.dot  classFaceDetector-members.html  classFaceDetector.html  classFaceManager-members.html  classFaceManager.html  classFaceRecognizerWrapper-members.html  classFaceRecognizerWrapper.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classPinWindow-members.html  classPinWindow.html  classPinWindow__inherit__graph.dot  classes.html  classtraining.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  facemanager_8cpp.html  facemanager_8cpp__incl.dot  (+38 more)
recognizer/: labels.txt
src/: EditProfile.cpp  EditProfile.h  FaceDetector.cpp  FaceDetector.h  FaceRecognizerWrapper.cpp  FaceRecognizerWrapper.h  facemanager.cpp  facemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  pin.cpp  pin.h  training.cpp  training.h
textfiles/: names.csv
(+92 files in other folders)
